Revision history for Perl extension Schedule::ByClock.


Date        Version  Changes
08-Dec-1999 V0.90    First public release.
27-Jan-2000 V0.91    Added the posibility to wait for a minute in the hour.